--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lesshat": "^4.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
@@ -43,6 +44,7 @@
     "customize-cra": "^0.9.1",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "raw-loader": "^4.0.0",
     "react-app-rewired": "^2.1.5"
   }
 }
