--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-scroll": "^1.7.16",
+    "react-scroll-into-view": "^1.8.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
