--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "copyright": "0.0.3",
     "lesshat": "^4.1.0",
@@ -19,6 +20,7 @@
     "react-scripts": "3.4.0",
     "react-scroll": "^1.7.16",
     "react-scroll-into-view": "^1.8.0",
+    "react-virtualized": "^9.21.2",
     "redux": "^4.0.5"
   },
   "scripts": {
