--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "dependencies": {
     "@ant-design/dark-theme": "^1.0.3",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "copyright": "0.0.3",
     "lesshat": "^4.1.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
     "react-measure": "^2.3.0",
     "react-redux": "^7.2.0",
@@ -20,7 +20,8 @@
     "react-scripts": "3.4.0",
     "react-scroll": "^1.7.16",
     "react-virtualized": "^9.21.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -46,7 +47,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "animejs": "^3.1.0",
-    "antd": "^3.26.9",
+    "antd": "^3.26.13",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
     "less": "^3.11.1",
