--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,5 +1,6 @@
 {
     "plugins": [
-        "react-activation/babel"
+        // "react-activation/babel",
+        "react-hot-loader/babel",
     ]
 }
