--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "f:\\workspace\\react\\blog-backend\\env\\Scripts\\python.exe"
+    "python.pythonPath": "env\\Scripts\\python.exe"
 }
