--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,6 +1,6 @@
 {
     "plugins": [
         // "react-activation/babel",
-        "react-hot-loader/babel",
+        // "react-hot-loader/babel",
     ]
 }
