--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,29 @@
 asgiref==3.2.4
 astroid==2.3.3
 autopep8==1.5
+certifi==2019.11.28
+chardet==3.0.4
 colorama==0.4.3
+defusedxml==0.6.0
 Django==3.0.4
+django-allauth==0.41.0
 django-cors-headers==3.2.1
+django-rest-auth==0.9.5
 djangorestframework==3.11.0
+idna==2.9
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+oauthlib==3.1.0
 pycodestyle==2.5.0
 pylint==2.4.4
 pylint-django==2.0.14
 pylint-plugin-utils==0.6
+python3-openid==3.1.0
 pytz==2019.3
+requests==2.23.0
+requests-oauthlib==1.3.0
 six==1.14.0
 sqlparse==0.3.1
+urllib3==1.25.8
 wrapt==1.11.2
