--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,12 +10,15 @@ django-allauth==0.41.0
 django-cors-headers==3.2.1
 django-rest-auth==0.9.5
 djangorestframework==3.11.0
+djangorestframework-jwt==1.11.0
 idna==2.9
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 oauthlib==3.1.0
+Pillow==7.0.0
 pycodestyle==2.5.0
+PyJWT==1.7.1
 pylint==2.4.4
 pylint-django==2.0.14
 pylint-plugin-utils==0.6
