--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,27 @@
+amqp==1.4.9
+anyjson==0.3.3
 asgiref==3.2.4
 astroid==2.3.3
 autopep8==1.5
+billiard==3.3.0.23
+celery==3.1.26.post2
+celery-with-redis==3.0
 certifi==2019.11.28
 chardet==3.0.4
 colorama==0.4.3
 defusedxml==0.6.0
 Django==3.0.4
 django-allauth==0.41.0
+django-celery==3.3.1
 django-cors-headers==3.2.1
 django-rest-auth==0.9.5
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
 idna==2.9
+importlib-metadata==1.6.0
 isort==4.3.21
+itsdangerous==1.1.0
+kombu==3.0.37
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 oauthlib==3.1.0
@@ -24,9 +33,13 @@ pylint-django==2.0.14
 pylint-plugin-utils==0.6
 python3-openid==3.1.0
 pytz==2019.3
+redis==2.10.6
 requests==2.23.0
 requests-oauthlib==1.3.0
 six==1.14.0
 sqlparse==0.3.1
+typed-ast==1.4.1
 urllib3==1.25.8
+vine==1.3.0
 wrapt==1.11.2
+zipp==3.1.0
